--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -59,7 +59,7 @@
   background: var(--Red);
   color: var(--whiteColor);
   font-family: 'Roboto',sans-serif;
-  font-size: 1.5em;
+  font-size: 1.5vw;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
