--- a/src/pages/Smart_health_metrics.css
+++ b/src/pages/Smart_health_metrics.css
@@ -16,6 +16,8 @@
   flex-wrap: wrap;
   gap: 1.4em;
   flex-grow: 1;
+  justify-content: center;
+  align-items: center;
 }
 .child .recording{
   overflow: hidden;
