--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -28,6 +28,7 @@
 .welcome .wel .pre{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  color: var(--darkgraycolor);
 }
 .welcome .wel .link{
   color: var(--Red);
