--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -1,7 +1,7 @@
 .about-us-container {
   display: flex;
   flex-direction: column;
-  padding: 7vh 9vh 0vh 9vh;
+  padding: 6vw 7vw 2vw 7vw;
   height: auto;
   width: 100%;
 }
@@ -10,7 +10,7 @@
 .about-us-section2 h2 {
   color: var(--graycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 32px;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -18,8 +18,8 @@
 .about-us-section {
   flex-direction: row;
   display: flex;
-  gap: 20px;
-  margin-bottom: 4%;
+  gap: 4rem;
+  /* margin-bottom: 4%; */
 }
 .left-part,
 .right-part {
@@ -29,9 +29,6 @@
   gap: 20px;
 }
 
-.right-part {
-  margin-left: 51px;
-}
 .left-part,
 .right-part {
   flex: 1;
@@ -40,18 +37,17 @@
 }
 .left-part img,
 .right-part img {
-  border-radius: 8px;
   max-width: 100%;
   height: auto;
   flex-shrink: 0;
 }
 
 .left-part p {
-  max-width: 649px;
-  height: 160px;
+  max-width: 40.5625rem;
+  min-height: 10rem;
 }
 .right-part p {
-  max-width: 605px;
+  max-width:37.8125rem;
 }
 
 .left-part p,
@@ -60,7 +56,7 @@
 .about-us-section2 .down-part p {
   color: var(--darkgraycolor);
   font-family: "Roboto", sans-serif;
-  font-size: 24px;
+  font-size: 1.5rem;  
   font-weight: 400;
   line-height: 110%;
 }
@@ -85,6 +81,10 @@
   font-size: 22px;
   font-weight: 700;
 }
+
+
+
+
 
 .about-us-section2 .parent {
   display: inline-flex;
@@ -276,9 +276,15 @@
   stroke: var(--Red);
 }
 
-#ai {
-  /* min-width: 14vw; */
+@media (max-width: 768px) {
+  .about-us-section, .about-us-section2{
+    flex-direction: column;
+    width: 100%;
+  }
 }
+
+
+
 
 /* @media (max-width: 768px) {
   .container .Ourfeatures .feature {
