--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -59,7 +59,7 @@
   background: var(--Red);
   color: var(--whiteColor);
   font-family: 'Roboto',sans-serif;
-  font-size: 1.5vw;
+  font-size: 1.5em;
   font-style: normal;
   font-weight: 500;
   line-height: 100%;
@@ -96,7 +96,6 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-top: -2vh;
 }
 
 .name svg{
@@ -105,8 +104,6 @@
   font-weight: 700;
   font-size: 6em;
   line-height: 110%;
-  margin-left: 1vh;
-  margin-top: 4.7vh;
   flex-shrink: 0;
 }
 .child{
@@ -124,7 +121,7 @@
   flex-shrink: 0;
   max-width: 60rem;
   border-radius: 10px;
-  margin:0 2vh 5vh 0;
+  margin:0 2vh 1vh 0;
   border: 1px solid #A4A2A2;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); 
   background-color: white;
