--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -1,11 +1,12 @@
+
 .about-us-container {
   display: flex;
   flex-direction: column;
-  padding: 6vw 7vw 2vw 7vw;
+  padding: 6vw 6vw 2vw 5vw;
   height: auto;
   width: 100%;
+  gap: 3rem;
 }
-
 .about-us-container .about-us-section h2,
 .about-us-section2 h2 {
   color: var(--graycolor);
@@ -19,7 +20,6 @@
   flex-direction: row;
   display: flex;
   gap: 4rem;
-  /* margin-bottom: 4%; */
 }
 .left-part,
 .right-part {
@@ -69,35 +69,28 @@
   font-weight: 900;
   line-height: 110%;
 }
-.medi-text {
-  font-size: 26px;
+.medi-text ,.medi-text2{
+  font-size: 1.625rem;
 }
 
-.medi-text2 {
-  font-size: 24px;
-}
 
 .medi-text3 {
-  font-size: 22px;
+  font-size: 1.5;
   font-weight: 700;
 }
-
-
-
-
 
 .about-us-section2 .parent {
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: 2.5rem;
   margin-bottom: 4%;
 }
 .about-us-section2 .parent p {
-  max-width: 1276px;
+  max-width: 79.75rem;
 }
 .about-us-section2 .parent hr {
-  margin: 20px;
+  margin: 1.5rem;
   border: 1px solid transparent;
 }
 
@@ -109,14 +102,37 @@
   margin-bottom: 4%;
 }
 .about-us-section2 .down-part p {
-  margin-bottom: 65px;
-  max-width: 647px;
+  margin-bottom: 4rem;
+  max-width: 40.4375rem;
+}
+.about-us-section2 .down-part{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 31.25rem;
+}
+.about-us-section2 .down-part .txt{
+  width: 100%;
+}
+.about-us-section2 .down-part .backimg{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; 
+  background: url(../images/pic_about_right2.png) no-repeat right center / cover rgb(255, 255, 255) ;
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-size: 31.25rem ;
+  height: 31.25rem;
+  opacity: 1; 
+  z-index: -1;
 }
 
 .about-us-section2 .down-part .dparag {
-  max-width: 814px;
+  width: 100%;
+  max-width: 55.875rem;
   font-family: "Roboto", sans-serif;
-  font-size: 22px;
+  font-size: 1.5em;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -277,12 +293,22 @@
 }
 
 @media (max-width: 768px) {
-  .about-us-section, .about-us-section2{
+  .about-us-section, .about-us-section2,
+  .about-us-section2 .down-part{
     flex-direction: column;
     width: 100%;
   }
-}
+  .about-us-section2 .down-part .backimg{
+    opacity: 0.5; 
+  }
 
+  .about-us-section2 .down-part p,
+  .about-us-section2 .down-part .dparag {
+    margin-bottom: 2rem; 
+    max-width: 100%; 
+  }
+  
+}
 
 
 
