--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -73,6 +73,9 @@
                         /* smart health */
 
 .smarthealth-sec{
+  width: 100%;
+  max-width:100vw;
+  /* height: 38.9375vh; */
   background: linear-gradient(90deg, rgba(190, 2, 2, 0.09) 0%, rgba(190, 2, 2, 0.5) 46.81%, rgba(190, 2, 2, 0.09) 100%);
 }
 
