--- a/src/components/header.css
+++ b/src/components/header.css
@@ -13,7 +13,7 @@ header {
   background-color: var(--whiteColor);
   color: var(--Red);
   align-items: center;
-  justify-content: space-between;
+   justify-content:center;
 }
 
 .Navbar h3 {
