--- a/src/pages/ar_disease.css
+++ b/src/pages/ar_disease.css
@@ -9,7 +9,7 @@
 
 .address {
   color: #be0202;
-  font-family: Roboto;
+  font-family: 'Roboto',sans-serif;
   font-size: 2rem;
   font-style: normal;
   font-weight: 700;
