--- a/src/pages/About_us.css
+++ b/src/pages/About_us.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: 1.5rem;
 }
 
 .left-part,
@@ -106,34 +106,29 @@
   max-width: 40.4375rem;
 }
 .about-us-section2 .down-part{
-  position: relative;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  height: 31.25rem;
-  overflow: hidden;
 }
 .about-us-section2 .down-part .txt{
-  width: 100%;
-  z-index: 2;
   position: relative;
+  width: 100%;
+  z-index: 1;
 }
 .about-us-section2 .down-part .backimg{
-  /* position: absolute; */
-  /* display: flex;
+  position: absolute;
+  display: flex;
   justify-content: flex-end;
-  align-items: center;  */
+  align-items: center; 
+  right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
   background: url(../images/pic_about_right2.png) no-repeat right center / cover rgb(255, 255, 255) ;
-  width: 50%;
-  height: 100%;
-  /* position: absolute; */
-  background-size: 31.25rem ;
-  height: 31.25rem;
-
-
-  
+  width: 100%;
+  background-size: contain;
+  min-height: 31.25rem;
   opacity: 1; 
-  z-index: -1;
+  z-index: -1; 
 }
 
 .about-us-section2 .down-part .dparag {
@@ -145,8 +140,11 @@
   font-weight: 700;
   line-height: 110%;
 }
+.about-us-section2{
+  margin-bottom: 8em;
+}
 .about-us-section3 {
-  margin-bottom: 4%;
+  margin-bottom: 1em;
 }
 .about-us-section3 .title {
   display: flex;
@@ -154,16 +152,16 @@
   align-items: center;
   text-align: center;
   width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px; */
+  margin-bottom: 1.5rem;
 }
-.about-us-section3 .title img {
-  margin-right: 10px;
-}
+/* .about-us-section3 .title{
+  gap: 1rem;
+} */
 .about-us-section3 .title h3 {
   color: var(--Red);
   font-family: "Roboto", sans-serif;
-  font-size: 32px;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: 110%;
@@ -178,17 +176,21 @@
   position: relative;
   width: 100%;
   display: inline-flex;
-  gap: 40px;
+  gap: 2rem;
   align-items: flex-start;
   scroll-behavior: smooth;
-  padding: 20px;
+  padding: 2vw;
   overflow-x: hidden;
+  /* max-width: 90vw;
+  min-height: 20vh;   */
 }
 .container .Ourfeatures .feature {
   flex: 0 0 auto;
-  max-width: 374px;
-  min-height: 359px;
-  border-radius: 20px;
+  min-height: 22.4375rem;
+  max-width: 23.375rem;
+  /* max-width: 30vw; */
+  /* min-height: 25vh; */
+  border-radius: 1.25rem;
   border: 1px solid var(--Red);
   background: linear-gradient(90deg, var(--blackred) 0%, var(--blackred) 100%);
 }
@@ -202,21 +204,29 @@
   max-height: 106.282px;
   flex-shrink: 0;
 }
+.container .prev, .container .next {
+  /* top: 50%;  */
+  /* transform: translateY(-50%);  */
+}
 .container .prev {
-  left: 4em;
+  left: 2vw;
   top: 20vh;
 }
 .container .next {
-  right: 0em;
+  right: 2vw;
   top: 20vh;
 }
 .about-us-section3 .Ourfeatures .feature p {
   color: var(--whiteColor);
   font-family: "Roboto", sans-serif;
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 110%;
   padding: 3vh;
 }
+/* .img-btn img {
+  width: 15vw; 
+  max-width: 10vw;
+} */
 .img-btn {
   padding: 3vh;
   display: flex;
@@ -242,8 +252,8 @@
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.about-us-section4 .title img {
-  margin-right: 10px;
+.about-us-section4 .title {
+  gap: 1rem;
 }
 .about-us-section4 .title h3 {
   color: var(--Red);
@@ -259,7 +269,7 @@
   width: 100%;
   display: inline-flex;
   gap: 1.2em;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   padding: 2vw 0vh; /* overflow-x: hidden; */ /* flex-wrap: nowrap; */
   flex-direction: row;
   justify-content: center;
