--- a/src/pages/doctors.css
+++ b/src/pages/doctors.css
@@ -1,70 +1,61 @@
-.section{
-    width: 1446px;
+.doctor-container{
+    max-width: 90rem;
+height: 90.625rem;
+  }
+
+  .doctor-section{
+    width: 84.0625rem;
+height: 3.8125rem;
+flex-shrink: 0;
+
+  }
+
+  .coat{
+    color: #BE0202;
+    font-style: normal;
+    line-height: normal;
+    padding: 3rem 0rem 4rem 4rem;
   }
   
   .search-box {
     position: relative;
-    background: rgba(252, 252, 252, 1);
+ 
     
-    width: 582px;
-  height: 651px;
-  top: -50px;
-  left: 700px;
+    width: 3rem;
+  height: 3rem;
+  top: -6rem;
+  left: 49rem;
   
-    border-radius: 15px;
-    box-shadow: 5px 5px 30px rgba(252, 252, 252, 1);
+    border-radius: 5rem;
     
   }
   
   .search-box input[type="text"] {
-    width: 582.29px;
-    padding: 10px 30px 10px 30px;    
-    border: 1px solid rgba(190, 2, 2, 1);
-    border-radius: 10px;
-    font-family: Roboto;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0em;
-  height: 61px;
-  top: 120px;
-  left: 808.71px;
+    width: 33.39306rem;
+height: 2.8200rem;
+flex-shrink: 0;
+border-radius: 0.625rem;
+
+border: 1px solid #BE0202;
+    color: #1F1F1F;
+font-family: Roboto;
+font-size: 1.25rem;
+font-style: normal;
+
+line-height: normal;
+left: 20rem;
+padding: 0rem 3rem ;
   }
   
-  
-  .fa-solid {
-    position: absolute;
-    left: -491px;   
-    top: 5%;
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    transform:     translateY(-50%);
-    font-size: 18px;
-    padding-left: 500px;
+  .nod{
+   
+    justify-content: space-between;
+align-items: flex-start;
+gap: 1rem;
+
   }
-    
+
   
-  .far{
-    color: rgba(250, 143, 33, 1);
-    cursor: pointer;
-    transition: 0.4s ease-in-out;
-    width: 36px;
-    font-size: 30px;
-    border-radius: 5px;
-    padding-top: 5px;
-  }
-  
-  .fa-thin{
-    position: absolute;
-    
-    cursor: pointer;
-    width: 24px;
-    height: 24px;
-    transform:     translateY(-50%);
-    font-size: 15px;
-    
-  }
   
   .search-box img{
     display: flex;
