--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,14 @@
   font-family: "Roboto", sans-serif;
 }
 
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 :root {
   --Red: #be0202;
   --blackred:rgba(190, 2, 2, 0.50);
