--- a/src/pages/fill_information.css
+++ b/src/pages/fill_information.css
@@ -1,6 +1,8 @@
 .info{
   display: flex;
+  flex: 1;
   flex-direction: column;
+  justify-content: center;
   padding: 3vw 3vw 0vw 3vw;
 }
 .info h3{
