--- a/src/pages/fill_information.css
+++ b/src/pages/fill_information.css
@@ -36,6 +36,11 @@
   align-items: center;
   padding: 1vw;
 }
+input::placeholder {
+  font-size: 1.3rem; 
+  color: #b1aeae; 
+  font-style: italic; 
+}
 .info label{
   color: var(--graycolor);
   font-family: 'Roboto',sans-serif;
