--- a/src/pages/fill_information.css
+++ b/src/pages/fill_information.css
@@ -37,7 +37,7 @@
   padding: 1vw;
 }
 input::placeholder {
-  font-size: 1.3rem; 
+  font-size: 1em; 
   color: #b1aeae; 
   font-style: italic; 
 }
